tests/ui/try_transmute_ref-dst-mutable.msrv.stderr
error[E0308]: mismatched types
  --> $DIR/try_transmute_ref-dst-mutable.rs:17:33
   |
17 |     let _: Result<&mut u8, _> = try_transmute_ref!(&0u8);
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/try_transmute_ref-dst-mutable.rs:17:33
   |
17 |     let _: Result<&mut u8, _> = try_transmute_ref!(&0u8);
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 types differ in mutability
   |                                 help: try using a variant of the expected enum: `Err(t.try_transmute_ref())`
   |
   = note: expected enum `Result<&mut u8, _>`
              found enum `Result<&_, ValidityError<&u8, _>>`
   = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
